--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,11 @@
 ---
-title: "personal_website"
+title: "RebeccaLMartinez.github.io"
 ---
 
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+```{r}
+1 + 1
+```
