--- a/cv.qmd
+++ b/cv.qmd
@@ -3,3 +3,44 @@ title: "cv"
 format: html
 ---
 
+# ***Under Construction***
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
