added SRHH photo to about

--- a/about.qmd
+++ b/about.qmd
@@ -59,7 +59,8 @@ Community involvement has always been a meaningful part of my life. Whether itâ€
 To me, meaningful work is about showing up â€” and trusting that what we offer contributes to something bigger than ourselves.
 
 
-photo
+![Proclamation presented by the City of Santa Maria to She Raised Her Hand.](/media/srhh.jpeg)
+
 photo
 
 Please visit [**She Raised Her Hand**](https://www.sheraisedherhand.com) for more information and upcoming events.  
