added theme to cv and resume

--- a/cv.qmd
+++ b/cv.qmd
@@ -1,6 +1,10 @@
 ---
-title: "cv"
-format: html
+title: "CV"
+format: 
+  html:
+    theme: darkly
+    toc: false
+    css: styles.css
 ---
 
 # ***Under Construction***
