tried making a game but it was boring. added a quiz and more pics in media.

--- a/cv.qmd
+++ b/cv.qmd
@@ -7,17 +7,9 @@ format:
     css: styles.css
 ---
 
-# ***Under Construction***
 
+*Under Construction*
 
-
-
-
-
-
-
-
-[Go back home 🏡](index.qmd)
 
 
 
