--- a/fieldphotos.qmd
+++ b/fieldphotos.qmd
@@ -11,10 +11,9 @@ format:
 Where are all the photos she promised??
 
 
-# *Under construction*
+*Under construction*
 
 
-[Go back home 🏡](index.qmd)
 
 
 
