corrected Kayla's name

--- a/about.qmd
+++ b/about.qmd
@@ -50,7 +50,7 @@ I believe fieldwork is one of the most powerful ways to teach and inspire others
 
 ![Harvesting lavender to distill into oil.](/media/lavendar.jpeg)
 
-![With Kayla Anctil-Geronimo on Santa Cruz Island Reserve.](/media/rebecca_kayla_sci.jpeg)
+![With Kayla Geronimo-Anctil on Santa Cruz Island Reserve.](/media/rebecca_kayla_sci.jpeg)
 
 *You can explore my [projects](projects.qmd) and [photos](fieldphotos.qmd) pages to see what I’ve been up to.*
 
