changed cat files to jpeg and adjusted code, tried new way of doing cat quiz

--- a/about.qmd
+++ b/about.qmd
@@ -39,7 +39,7 @@ I’m a proud mom to two incredible teenagers. They've grown up alongside my jou
 
 ![My Family.](/media/kids.jpg)
 
-![Chester and Leo.](/media/cats.jpg)
+![Chester and Leo.](/media/cats.jpeg)
 
 *Curious about Chester and Leo? You can find more fluffiness [here.](cats.qmd)*
 
