--- a/cats.qmd
+++ b/cats.qmd
@@ -20,11 +20,10 @@ Chester and Leo got into the code again.
 
 
 ## Are You More Like Chester or Leo?
+
 <details>
-  <summary><strong>**Find out now!**\ </strong></summary>
-  
-  
-  
+  <summary><strong>Find out now!</strong></summary>
+
 <div id="quiz-container">
   <p id="question"></p>
   <div id="answers"></div>
@@ -63,7 +62,7 @@ const quiz = [
     ]
   },
   {
-    question: "Final question: Litter box etiquette?",
+    question: "Litter box etiquette?",
     answers: [
       { text: "Um… I try, okay? But I might need help.", type: "chester" },
       { text: "I’ve got it covered. Literally.", type: "leo" }
@@ -119,15 +118,15 @@ function showResult() {
 
   if (scores.chester > scores.leo) {
     resultText = "You're more like Chester 🐈 — calm, kind, and quietly brilliant.";
-    imgSrc = "/media/chester.jpg";
+    imgSrc = "media/chester.jpeg";
     imgAlt = "Photo of Chester the cat";
   } else if (scores.leo > scores.chester) {
     resultText = "You're more like Leo 🐾 — bold, affectionate, and full of life.";
-    imgSrc = "/media/leo.jpg";
+    imgSrc = "media/leo.jpeg";
     imgAlt = "Photo of Leo the cat";
   } else {
     resultText = "You're a perfect mix of Chester and Leo — the best of both cats!";
-    imgSrc = "/media/cats.jpg";
+    imgSrc = "media/cats.jpeg";
     imgAlt = "Photo of Chester and Leo together";
   }
 
@@ -137,13 +136,9 @@ function showResult() {
 
 showQuestion();
 </script>
+
 </details>
 
-
-
 Check back soon for more feline mischief, fluff, and fun!
-
-
-
 
 
