created seperate html file for quiz. embedded quiz on cats page using iframe

--- a/cats.qmd
+++ b/cats.qmd
@@ -21,123 +21,7 @@ Chester and Leo got into the code again.
 
 ## Are You More Like Chester or Leo?
 
-<details>
-  <summary><strong>Find out now!</strong></summary>
-
-<div id="quiz-container">
-  <p id="question"></p>
-  <div id="answers"></div>
-  <div id="result" style="font-weight: bold; font-size: 1.2em; margin-top: 1em;"></div>
-  <div id="result-image" style="margin-top: 1em;"></div>
-</div>
-
-<script>
-const quiz = [
-  {
-    question: "How do you feel about new places or people?",
-    answers: [
-      { text: "A little shy at first — I like to observe before jumping in.", type: "chester" },
-      { text: "LOVE IT! I want to be the center of attention!", type: "leo" }
-    ]
-  },
-  {
-    question: "What’s your social style?",
-    answers: [
-      { text: "Quiet and loyal once I trust you.", type: "chester" },
-      { text: "Energetic and always nearby. Like, always.", type: "leo" }
-    ]
-  },
-  {
-    question: "How would your friends describe you?",
-    answers: [
-      { text: "Grateful and sweet with a gentle soul.", type: "chester" },
-      { text: "Not subtle, but full of love and charm.", type: "leo" }
-    ]
-  },
-  {
-    question: "Your approach to solving problems?",
-    answers: [
-      { text: "Take a step back, think, and go quietly.", type: "chester" },
-      { text: "Charge in. Confidence over strategy!", type: "leo" }
-    ]
-  },
-  {
-    question: "Litter box etiquette?",
-    answers: [
-      { text: "Um… I try, okay? But I might need help.", type: "chester" },
-      { text: "I’ve got it covered. Literally.", type: "leo" }
-    ]
-  }
-];
-
-let currentQuestion = 0;
-const scores = { chester: 0, leo: 0 };
-
-function showQuestion() {
-  const questionEl = document.getElementById("question");
-  const answersEl = document.getElementById("answers");
-  const resultEl = document.getElementById("result");
-  const imageEl = document.getElementById("result-image");
-  resultEl.innerHTML = "";
-  imageEl.innerHTML = "";
-
-  const q = quiz[currentQuestion];
-  questionEl.innerText = q.question;
-  answersEl.innerHTML = "";
-
-  q.answers.forEach((answer) => {
-    const btn = document.createElement("button");
-    btn.innerText = answer.text;
-    btn.style.margin = "0.5em";
-    btn.className = "btn btn-custom-green";
-    btn.onclick = () => {
-      scores[answer.type]++;
-      currentQuestion++;
-      if (currentQuestion < quiz.length) {
-        showQuestion();
-      } else {
-        showResult();
-      }
-    };
-    answersEl.appendChild(btn);
-  });
-}
-
-function showResult() {
-  const resultEl = document.getElementById("result");
-  const imageEl = document.getElementById("result-image");
-  const questionEl = document.getElementById("question");
-  const answersEl = document.getElementById("answers");
-
-  questionEl.innerHTML = "";
-  answersEl.innerHTML = "";
-
-  let resultText = "";
-  let imgSrc = "";
-  let imgAlt = "";
-
-  if (scores.chester > scores.leo) {
-    resultText = "You're more like Chester 🐈 — calm, kind, and quietly brilliant.";
-    imgSrc = "media/chester.jpeg";
-    imgAlt = "Photo of Chester the cat";
-  } else if (scores.leo > scores.chester) {
-    resultText = "You're more like Leo 🐾 — bold, affectionate, and full of life.";
-    imgSrc = "media/leo.jpeg";
-    imgAlt = "Photo of Leo the cat";
-  } else {
-    resultText = "You're a perfect mix of Chester and Leo — the best of both cats!";
-    imgSrc = "media/cats.jpeg";
-    imgAlt = "Photo of Chester and Leo together";
-  }
-
-  resultEl.innerText = resultText;
-  imageEl.innerHTML = `<img src="${imgSrc}" alt="${imgAlt}" style="max-width: 300px; border-radius: 12px; margin-top: 1em;">`;
-}
-
-showQuestion();
-</script>
-
-</details>
+<iframe src="quiz.html" width="100%" height="600" style="border: none;"></iframe>
 
 Check back soon for more feline mischief, fluff, and fun!
 
